--- a/Sakura.AspNetCore.Extensions/src/Sakura.AspNetCore.PagedList/Sakura.AspNetCore.PagedList.csproj
+++ b/Sakura.AspNetCore.Extensions/src/Sakura.AspNetCore.PagedList/Sakura.AspNetCore.PagedList.csproj
@@ -16,7 +16,7 @@
     <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
     <RootNamespace>Sakura.AspNetCore</RootNamespace>
     <Authors>Iris Sakura</Authors>
-    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <GeneratePackageOnBuild>False</GeneratePackageOnBuild>
     <RepositoryUrl>https://github.com/sgjsakura/AspNetCore.git</RepositoryUrl>
   </PropertyGroup>
 
