--- a/Sakura.AspNetCore.Extensions/src/Sakura.AspNetCore.Mvc.PagedList/Sakura.AspNetCore.Mvc.PagedList.csproj
+++ b/Sakura.AspNetCore.Extensions/src/Sakura.AspNetCore.Mvc.PagedList/Sakura.AspNetCore.Mvc.PagedList.csproj
@@ -16,7 +16,7 @@
     <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
     <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
     <RootNamespace>Sakura.AspNetCore.Mvc</RootNamespace>
-    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <GeneratePackageOnBuild>False</GeneratePackageOnBuild>
     <RepositoryUrl>https://github.com/sgjsakura/AspNetCore.git</RepositoryUrl>
     <Version>3.0.0</Version>
   </PropertyGroup>
