--- a/Sakura.AspNetCore.Extensions/src/Sakura.AspNetCore.PagedList.Abstractions/Sakura.AspNetCore.PagedList.Abstractions.csproj
+++ b/Sakura.AspNetCore.Extensions/src/Sakura.AspNetCore.PagedList.Abstractions/Sakura.AspNetCore.PagedList.Abstractions.csproj
@@ -15,7 +15,7 @@
     <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
     <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
     <Authors>Iris Sakura</Authors>
-    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <GeneratePackageOnBuild>False</GeneratePackageOnBuild>
     <RepositoryUrl>https://github.com/sgjsakura/AspNetCore.git</RepositoryUrl>
   </PropertyGroup>
 
