Update Project file

--- a/Sakura.AspNetCore.Extensions/src/Sakura.AspNetCore.Messages.Abstractions/Sakura.AspNetCore.Messages.Abstractions.csproj
+++ b/Sakura.AspNetCore.Extensions/src/Sakura.AspNetCore.Messages.Abstractions/Sakura.AspNetCore.Messages.Abstractions.csproj
@@ -16,13 +16,9 @@
     <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
     <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
     <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
-    <GeneratePackageOnBuild>False</GeneratePackageOnBuild>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <RepositoryUrl>https://github.com/sgjsakura/AspNetCore.git</RepositoryUrl>
     <Version>1.0.1</Version>
   </PropertyGroup>
-
-  <Target Name="PostcompileScript" AfterTargets="Build">
-    <Exec Command="dotnet pack --no-build -c Release" />
-  </Target>
 
 </Project>
