--- a/Sakura.AspNetCore.Extensions/src/Sakura.AspNetCore.Authentication.ExternalCookie/Sakura.AspNetCore.Authentication.ExternalCookie.csproj
+++ b/Sakura.AspNetCore.Extensions/src/Sakura.AspNetCore.Authentication.ExternalCookie/Sakura.AspNetCore.Authentication.ExternalCookie.csproj
@@ -15,7 +15,7 @@
     <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
     <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
     <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
-    <GeneratePackageOnBuild>False</GeneratePackageOnBuild>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <PackageIconUrl></PackageIconUrl>
     <RepositoryUrl>https://github.com/sgjsakura/AspNetCore.git</RepositoryUrl>
     <RootNamespace>Sakura.AspNetCore.Authentication</RootNamespace>
@@ -29,10 +29,6 @@
   <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
-
-  <Target Name="PostcompileScript" AfterTargets="Build" Condition=" '$(IsCrossTargetingBuild)' != 'true' ">
-    <Exec Command="dotnet pack --no-build -c Release" />
-  </Target>
 
   <ItemGroup Condition=" '$(TargetFramework)' == 'net451' ">
     <Reference Include="System" />
