--- a/Sakura.AspNetCore.Extensions/Sakura.AspNetCore.PagedList/Sakura.AspNetCore.PagedList.csproj
+++ b/Sakura.AspNetCore.Extensions/Sakura.AspNetCore.PagedList/Sakura.AspNetCore.PagedList.csproj
@@ -8,7 +8,7 @@
     <AssemblyName>Sakura.AspNetCore.PagedList</AssemblyName>
     <PackageId>Sakura.AspNetCore.PagedList</PackageId>
     <PackageTags>ASP.NET;ASP.NETCore;Page;Paging;Cache;Caching</PackageTags>
-    <PackageReleaseNotes>VS 2017 Update</PackageReleaseNotes>
+    <PackageReleaseNotes>Update dependency</PackageReleaseNotes>
     <PackageProjectUrl>https://github.com/sgjsakura/AspNetCore</PackageProjectUrl>
     <PackageLicenseUrl>https://github.com/sgjsakura/AspNetCore/blob/master/LICENSE.txt</PackageLicenseUrl>
     <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
@@ -18,6 +18,7 @@
     <Authors>Iris Sakura</Authors>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <RepositoryUrl>https://github.com/sgjsakura/AspNetCore.git</RepositoryUrl>
+    <Version>2.0.2</Version>
   </PropertyGroup>
 
   <ItemGroup>
