--- a/Sakura.AspNetCore.Extensions/Sakura.AspNetCore.DynamicLocalizer/Sakura.AspNetCore.DynamicLocalizer.csproj
+++ b/Sakura.AspNetCore.Extensions/Sakura.AspNetCore.DynamicLocalizer/Sakura.AspNetCore.DynamicLocalizer.csproj
@@ -9,12 +9,12 @@
     <Company>Iris Sakura</Company>
     <Product>Sakura.AspNetCore.Extensions</Product>
     <Description>This package provide dynamic style localiazation resource accesing ability.</Description>
-    <PackageReleaseNotes>Update to new usage.</PackageReleaseNotes>
+    <PackageReleaseNotes>Add xml documentation.</PackageReleaseNotes>
     <PackageLicenseUrl>https://github.com/sgjsakura/AspNetCore/blob/master/LICENSE.txt</PackageLicenseUrl>
     <PackageProjectUrl>https://github.com/sgjsakura/AspNetCore</PackageProjectUrl>
     <RepositoryUrl>https://github.com/sgjsakura/AspNetCore.git</RepositoryUrl>
     <PackageTags>ASP.NET;ASP.NETCore;MVC;MVCCore;Localization</PackageTags>
-    <Version>2.0.0</Version>
+    <Version>2.0.1</Version>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
