--- a/Sakura.AspNetCore.Extensions/Sakura.AspNetCore.DynamicLocalizer/Sakura.AspNetCore.DynamicLocalizer.csproj
+++ b/Sakura.AspNetCore.Extensions/Sakura.AspNetCore.DynamicLocalizer/Sakura.AspNetCore.DynamicLocalizer.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard1.6</TargetFramework>
+    <TargetFramework>netcoreapp2.0</TargetFramework>
     <RootNamespace>Sakura.AspNetCore.Localization</RootNamespace>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
 		<Title>ASP.NET Core MVC Dynamic Localizer Service</Title>
@@ -9,7 +9,8 @@
     <Company>Iris Sakura</Company>
     <Product>Sakura.AspNetCore.Extensions</Product>
     <Description>This package provide dynamic style localiazation resource accesing ability.</Description>
-    <PackageReleaseNotes>Add xml documentation.</PackageReleaseNotes>
+    <PackageReleaseNotes>Update to .NET Core 2.0</PackageReleaseNotes>
+    <AssetTargetFallback>$(AssetTargetFallback);dnxcore50</AssetTargetFallback>
     <PackageLicenseUrl>https://github.com/sgjsakura/AspNetCore/blob/master/LICENSE.txt</PackageLicenseUrl>
     <PackageProjectUrl>https://github.com/sgjsakura/AspNetCore</PackageProjectUrl>
     <RepositoryUrl>https://github.com/sgjsakura/AspNetCore.git</RepositoryUrl>
@@ -18,11 +19,11 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <DocumentationFile>bin\Release\netstandard1.6\Sakura.AspNetCore.DynamicLocalizer.xml</DocumentationFile>
+    <DocumentationFile>bin\Release\netcoreapp2.0\Sakura.AspNetCore.DynamicLocalizer.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Localization" Version="1.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Localization" Version="2.0.0" />
   </ItemGroup>
 
 </Project>
