--- a/Sakura.AspNetCore.Extensions/Sakura.AspNetCore.Messages.Abstractions/Sakura.AspNetCore.Messages.Abstractions.csproj
+++ b/Sakura.AspNetCore.Extensions/Sakura.AspNetCore.Messages.Abstractions/Sakura.AspNetCore.Messages.Abstractions.csproj
@@ -5,12 +5,13 @@
     <AssemblyTitle>ASP.NET Core Operation Message Abstraction Layer</AssemblyTitle>
     <VersionPrefix>1.0.1</VersionPrefix>
     <Authors>Iris Sakura</Authors>
-    <TargetFramework>netstandard1.0</TargetFramework>
+    <TargetFramework>netcoreapp2.0</TargetFramework>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <AssemblyName>Sakura.AspNetCore.Messages.Abstractions</AssemblyName>
     <PackageId>Sakura.AspNetCore.Messages.Abstractions</PackageId>
     <PackageTags>ASP.NET;ASP.NETCore;Message;Messages</PackageTags>
-    <PackageReleaseNotes>VS2017 Update</PackageReleaseNotes>
+    <PackageReleaseNotes>Update to .NET Core 2.0</PackageReleaseNotes>
+    <AssetTargetFallback>$(AssetTargetFallback);dnxcore50</AssetTargetFallback>
     <PackageProjectUrl>https://github.com/sgjsakura/AspNetCore</PackageProjectUrl>
     <PackageLicenseUrl>https://github.com/sgjsakura/AspNetCore/blob/master/LICENSE.txt</PackageLicenseUrl>
     <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
