--- a/Sakura.AspNetCore.Extensions/Sakura.AspNetCore.Messages/Sakura.AspNetCore.Messages.csproj
+++ b/Sakura.AspNetCore.Extensions/Sakura.AspNetCore.Messages/Sakura.AspNetCore.Messages.csproj
@@ -5,11 +5,12 @@
     <AssemblyTitle>ASP.NET Core Operation Message Core Library</AssemblyTitle>
     <VersionPrefix>1.0.2</VersionPrefix>
     <Authors>Iris Sakura</Authors>
-    <TargetFrameworks>netstandard1.6;net451</TargetFrameworks>
+    <TargetFrameworks>netcoreapp2.0</TargetFrameworks>
     <AssemblyName>Sakura.AspNetCore.Messages</AssemblyName>
     <PackageId>Sakura.AspNetCore.Messages</PackageId>
     <PackageTags>ASP.NET;ASP.NETCore;Message;Messages</PackageTags>
-    <PackageReleaseNotes>VS2017 Update</PackageReleaseNotes>
+    <PackageReleaseNotes>Update to .NET Core 2.0</PackageReleaseNotes>
+    <AssetTargetFallback>$(AssetTargetFallback);dnxcore50</AssetTargetFallback>
     <PackageProjectUrl>https://github.com/sgjsakura/AspNetCore</PackageProjectUrl>
     <PackageLicenseUrl>https://github.com/sgjsakura/AspNetCore/blob/master/LICENSE.txt</PackageLicenseUrl>
     <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
@@ -25,16 +26,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.ViewFeatures" Version="1.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.ViewFeatures" Version="2.0.0" />
   </ItemGroup>
 
   <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
-
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net451' ">
-    <Reference Include="System" />
-    <Reference Include="Microsoft.CSharp" />
-  </ItemGroup>
 
 </Project>
