--- a/Sakura.AspNetCore.Extensions/Sakura.AspNetCore.Messages/Sakura.AspNetCore.Messages.csproj
+++ b/Sakura.AspNetCore.Extensions/Sakura.AspNetCore.Messages/Sakura.AspNetCore.Messages.csproj
@@ -18,6 +18,7 @@
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <RepositoryUrl>https://github.com/sgjsakura/AspNetCore.git</RepositoryUrl>
     <Version>1.0.2</Version>
+    <RootNamespace>Sakura.AspNetCore</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
