--- a/Sakura.AspNetCore.Extensions/Sakura.AspNetCore.Authentication.ExternalCookie/Sakura.AspNetCore.Authentication.ExternalCookie.csproj
+++ b/Sakura.AspNetCore.Extensions/Sakura.AspNetCore.Authentication.ExternalCookie/Sakura.AspNetCore.Authentication.ExternalCookie.csproj
@@ -5,11 +5,11 @@
     <AssemblyTitle>ASP.NET Core External Cookie Library</AssemblyTitle>
     <VersionPrefix>2.0.0</VersionPrefix>
     <Authors>Iris Sakura</Authors>
-    <TargetFrameworks>netstandard1.3;net451</TargetFrameworks>
+    <TargetFrameworks>netstandard1.3;net451;netstandard2.0</TargetFrameworks>
     <AssemblyName>Sakura.AspNetCore.Authentication.ExternalCookie</AssemblyName>
     <PackageId>Sakura.AspNetCore.Authentication.ExternalCookie</PackageId>
     <PackageTags>ASP.NET;ASP.NETCore;Identity;External Cookie</PackageTags>
-    <PackageReleaseNotes>Add GetExternalAuthenticationSchemes methods, fix service dependency problem.</PackageReleaseNotes>
+    <PackageReleaseNotes>Add NETSTD 2.0 support.</PackageReleaseNotes>
     <PackageProjectUrl>https://github.com/sgjsakura/AspNetCore</PackageProjectUrl>
     <PackageLicenseUrl>https://github.com/sgjsakura/AspNetCore/blob/master/LICENSE.txt</PackageLicenseUrl>
     <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
@@ -19,12 +19,16 @@
     <PackageIconUrl></PackageIconUrl>
     <RepositoryUrl>https://github.com/sgjsakura/AspNetCore.git</RepositoryUrl>
     <RootNamespace>Sakura.AspNetCore.Authentication</RootNamespace>
-    <Version>2.0.2</Version>
+    <Version>2.1.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="1.0.0" />
+    <None Include="ExternalSignInManager.Net1.cs" />
   </ItemGroup>
+
+	<ItemGroup>
+		<PackageReference Include="Microsoft.AspNetCore.Identity" Version="1.0.0" />
+	</ItemGroup>
 
   <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
@@ -34,5 +38,9 @@
     <Reference Include="System" />
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
+
+	<ItemGroup Condition=" '$(TargetFramework)' == 'netstandard2.0' ">
+		<PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.0.0" />
+	</ItemGroup>
 
 </Project>
