Update Project Setting

--- a/Sakura.AspNetCore.Extensions/Sakura.EntityFrameworkCore.FromSqlExtensions/Sakura.EntityFrameworkCore.FromSqlExtensions.csproj
+++ b/Sakura.AspNetCore.Extensions/Sakura.EntityFrameworkCore.FromSqlExtensions/Sakura.EntityFrameworkCore.FromSqlExtensions.csproj
@@ -12,6 +12,7 @@
     <RepositoryType />
     <PackageReleaseNotes>First Release.</PackageReleaseNotes>
     <PackageTags>EntityFramework;EntityFrameworkCore;FromSql;Extension</PackageTags>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
