--- a/Sakura.AspNetCore.Extensions/Sakura.AspNetCore.PagedList.Abstractions/Sakura.AspNetCore.PagedList.Abstractions.csproj
+++ b/Sakura.AspNetCore.Extensions/Sakura.AspNetCore.PagedList.Abstractions/Sakura.AspNetCore.PagedList.Abstractions.csproj
@@ -4,21 +4,23 @@
     <Description>ASP.NET Core PagedList abstraction layer defines the IPagedList and IDynamicPagedList interface and useful extension methods for ASP.NET Core targeted projects. This project does not contains the implementation for creating paged list from a certain data source.</Description>
     <AssemblyTitle>ASP.NET Core PagedList Core Abstraction Layer</AssemblyTitle>
     <VersionPrefix>2.0.0</VersionPrefix>
-    <TargetFramework>netstandard1.0</TargetFramework>
+    <TargetFrameworks>netstandard1.0;netcoreapp3.0</TargetFrameworks>
     <AssemblyName>Sakura.AspNetCore.PagedList.Abstractions</AssemblyName>
     <PackageId>Sakura.AspNetCore.PagedList.Abstractions</PackageId>
     <PackageTags>ASP.NET;ASP.NETCore;Page;Paging</PackageTags>
-    <PackageReleaseNotes>Update IPagedList&lt;T&gt; interface to solve ambiguous property slot.</PackageReleaseNotes>
+    <PackageReleaseNotes>Update to support C# 8.0 interface default implementation</PackageReleaseNotes>
     <PackageProjectUrl>https://github.com/sgjsakura/AspNetCore</PackageProjectUrl>
-    <PackageLicenseUrl>https://github.com/sgjsakura/AspNetCore/blob/master/LICENSE.txt</PackageLicenseUrl>
     <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
     <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
     <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
     <Authors>Iris Sakura</Authors>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <RepositoryUrl>https://github.com/sgjsakura/AspNetCore.git</RepositoryUrl>
-    <Version>2.0.1</Version>
+    <Version>3.0.0</Version>
     <RootNamespace>Sakura.AspNetCore</RootNamespace>
+    <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
+    <AssemblyVersion>3.0.0.0</AssemblyVersion>
+    <FileVersion>3.0.0.0</FileVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
