--- a/Sakura.AspNetCore.Extensions/Sakura.EntityFrameworkCore.FromSqlExtensions/Sakura.EntityFrameworkCore.FromSqlExtensions.csproj
+++ b/Sakura.AspNetCore.Extensions/Sakura.EntityFrameworkCore.FromSqlExtensions/Sakura.EntityFrameworkCore.FromSqlExtensions.csproj
@@ -1,18 +1,20 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFrameworks>netstandard2.0</TargetFrameworks>
     <Authors>Iris Sakura</Authors>
     <Product>Sakura.AspNetCore.Extensions</Product>
     <Description>Provides extension methods used to executing raw SQL statements and retriving the result set directly from DbContext.</Description>
     <Copyright></Copyright>
     <PackageProjectUrl>https://github.com/sgjsakura/AspNetCore</PackageProjectUrl>
     <RepositoryUrl>https://github.com/sgjsakura/AspNetCore.git</RepositoryUrl>
-    <PackageLicenseUrl>https://github.com/sgjsakura/AspNetCore/blob/master/LICENSE.txt</PackageLicenseUrl>
+    <PackageLicenseUrl></PackageLicenseUrl>
     <RepositoryType />
-    <PackageReleaseNotes>First Release.</PackageReleaseNotes>
+    <PackageReleaseNotes>Update the package reference.</PackageReleaseNotes>
     <PackageTags>EntityFramework;EntityFrameworkCore;FromSql;Extension</PackageTags>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
+    <Version>1.1.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
