--- a/Sakura.AspNetCore.Extensions/Sakura.AspNetCore.Authentication.ExternalCookie/Sakura.AspNetCore.Authentication.ExternalCookie.csproj
+++ b/Sakura.AspNetCore.Extensions/Sakura.AspNetCore.Authentication.ExternalCookie/Sakura.AspNetCore.Authentication.ExternalCookie.csproj
@@ -5,13 +5,13 @@
     <AssemblyTitle>ASP.NET Core External Cookie Library</AssemblyTitle>
     <VersionPrefix>2.0.0</VersionPrefix>
     <Authors>Iris Sakura</Authors>
-    <TargetFrameworks>netstandard1.3;net451;netstandard2.0</TargetFrameworks>
+    <TargetFrameworks>netstandard1.3;net451;netstandard2.0;netcoreapp3.0</TargetFrameworks>
     <AssemblyName>Sakura.AspNetCore.Authentication.ExternalCookie</AssemblyName>
     <PackageId>Sakura.AspNetCore.Authentication.ExternalCookie</PackageId>
     <PackageTags>ASP.NET;ASP.NETCore;Identity;External Cookie</PackageTags>
-    <PackageReleaseNotes>Add NETSTD 2.0 support.</PackageReleaseNotes>
+    <PackageReleaseNotes>Add support for ASP.NET Core 3.0</PackageReleaseNotes>
     <PackageProjectUrl>https://github.com/sgjsakura/AspNetCore</PackageProjectUrl>
-    <PackageLicenseUrl>https://github.com/sgjsakura/AspNetCore/blob/master/LICENSE.txt</PackageLicenseUrl>
+    <PackageLicenseUrl></PackageLicenseUrl>
     <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
     <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
     <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
@@ -19,15 +19,17 @@
     <PackageIconUrl></PackageIconUrl>
     <RepositoryUrl>https://github.com/sgjsakura/AspNetCore.git</RepositoryUrl>
     <RootNamespace>Sakura.AspNetCore.Authentication</RootNamespace>
-    <Version>2.1.0</Version>
+    <Version>2.2.0</Version>
+    <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
   </PropertyGroup>
 
-  <ItemGroup>
-    <None Include="ExternalSignInManager.Net1.cs" />
-  </ItemGroup>
 
-	<ItemGroup>
+	<ItemGroup Condition=" '$(TargetFramework)' == 'netstandard1.3' ">
 		<PackageReference Include="Microsoft.AspNetCore.Identity" Version="1.0.0" />
+	</ItemGroup>
+
+	<ItemGroup Condition=" '$(TargetFramework)' == 'netcoreapp3.0' ">
+		<FrameworkReference Include="Microsoft.AspNetCore.App" />
 	</ItemGroup>
 
   <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
@@ -37,6 +39,7 @@
   <ItemGroup Condition=" '$(TargetFramework)' == 'net451' ">
     <Reference Include="System" />
     <Reference Include="Microsoft.CSharp" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="1.0.0" />
   </ItemGroup>
 
 	<ItemGroup Condition=" '$(TargetFramework)' == 'netstandard2.0' ">
