--- a/Sakura.AspNetCore.Extensions/Sakura.AspNetCore.DynamicLocalizer/Sakura.AspNetCore.DynamicLocalizer.csproj
+++ b/Sakura.AspNetCore.Extensions/Sakura.AspNetCore.DynamicLocalizer/Sakura.AspNetCore.DynamicLocalizer.csproj
@@ -1,28 +1,40 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>netstandard1.6</TargetFramework>
-    <RootNamespace>Sakura.AspNetCore.Localization</RootNamespace>
-    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+	<PropertyGroup>
+		<TargetFrameworks>netstandard1.6;netcoreapp3.0</TargetFrameworks>
+		<RootNamespace>Sakura.AspNetCore.Localization</RootNamespace>
+		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
 		<Title>ASP.NET Core MVC Dynamic Localizer Service</Title>
-    <Authors>Iris Sakura</Authors>
-    <Company>Iris Sakura</Company>
-    <Product>Sakura.AspNetCore.Extensions</Product>
-    <Description>This package provide dynamic style localiazation resource accesing ability.</Description>
-    <PackageReleaseNotes>Add xml documentation.</PackageReleaseNotes>
-    <PackageLicenseUrl>https://github.com/sgjsakura/AspNetCore/blob/master/LICENSE.txt</PackageLicenseUrl>
-    <PackageProjectUrl>https://github.com/sgjsakura/AspNetCore</PackageProjectUrl>
-    <RepositoryUrl>https://github.com/sgjsakura/AspNetCore.git</RepositoryUrl>
-    <PackageTags>ASP.NET;ASP.NETCore;MVC;MVCCore;Localization</PackageTags>
-    <Version>2.0.1</Version>
-  </PropertyGroup>
+		<Authors>Iris Sakura</Authors>
+		<Company>Iris Sakura</Company>
+		<Product>Sakura.AspNetCore.Extensions</Product>
+		<Description>This package provide dynamic style localiazation resource accesing ability.</Description>
+		<PackageReleaseNotes>Update to support ASP.NET Core 3.0</PackageReleaseNotes>
+		<PackageLicenseUrl></PackageLicenseUrl>
+		<PackageProjectUrl>https://github.com/sgjsakura/AspNetCore</PackageProjectUrl>
+		<RepositoryUrl>https://github.com/sgjsakura/AspNetCore.git</RepositoryUrl>
+		<PackageTags>ASP.NET;ASP.NETCore;MVC;MVCCore;Localization</PackageTags>
+		<Version>2.1.0</Version>
+		<PackageLicenseFile>Apache-2.0</PackageLicenseFile>
+	</PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <DocumentationFile>bin\Release\netstandard1.6\Sakura.AspNetCore.DynamicLocalizer.xml</DocumentationFile>
-  </PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+		<DocumentationFile>bin\Release\netstandard1.6\Sakura.AspNetCore.DynamicLocalizer.xml</DocumentationFile>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Localization" Version="1.0.0" />
-  </ItemGroup>
+	<ItemGroup Condition=" $(TargetFramework) != 'netcoreapp3.0 '">
+		<PackageReference Include="Microsoft.AspNetCore.Mvc.Localization" Version="1.0.0" />
+	</ItemGroup>
+
+	<ItemGroup Condition=" $(TargetFramework) == 'netcoreapp3.0 '">
+		<FrameworkReference Include="Microsoft.AspNetCore.App" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Include="Apache-2.0">
+	    <Pack>True</Pack>
+	    <PackagePath></PackagePath>
+	  </None>
+	</ItemGroup>
 
 </Project>
