--- a/Sakura.AspNetCore.Extensions/Sakura.AspNetCore.Mvc.TempDataExtensions/Sakura.AspNetCore.Mvc.TempDataExtensions.csproj
+++ b/Sakura.AspNetCore.Extensions/Sakura.AspNetCore.Mvc.TempDataExtensions/Sakura.AspNetCore.Mvc.TempDataExtensions.csproj
@@ -1,36 +1,41 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <Description>This package add the data type compatibility for ASP.NET Core TempData feature.</Description>
-    <AssemblyTitle>ASP.NET Core TempData Extension Library</AssemblyTitle>
-    <VersionPrefix>1.0.1</VersionPrefix>
-    <Authors>Iris Sakura</Authors>
-    <TargetFrameworks>netstandard1.6;net451</TargetFrameworks>
-    <AssemblyName>Sakura.AspNetCore.Mvc.TempDataExtensions</AssemblyName>
-    <PackageId>Sakura.AspNetCore.Mvc.TempDataExtensions</PackageId>
-    <PackageTags>ASP.NET;ASP.NETCore;MVC;MVCCore;TempData;ITempDataProvider</PackageTags>
-    <PackageReleaseNotes>VS 2017 Update</PackageReleaseNotes>
-    <PackageProjectUrl>https://github.com/sgjsakura/AspNetCore</PackageProjectUrl>
-    <PackageLicenseUrl>https://github.com/sgjsakura/AspNetCore/blob/master/LICENSE.txt</PackageLicenseUrl>
-    <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
-    <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
-    <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
-    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-    <RepositoryUrl>https://github.com/sgjsakura/AspNetCore.git</RepositoryUrl>
-    <RootNamespace>Sakura.AspNetCore.Mvc</RootNamespace>
-  </PropertyGroup>
+	<PropertyGroup>
+		<Description>This package add the data type compatibility for ASP.NET Core TempData feature.</Description>
+		<AssemblyTitle>ASP.NET Core TempData Extension Library</AssemblyTitle>
+		<VersionPrefix>1.1.0</VersionPrefix>
+		<Authors>Iris Sakura</Authors>
+		<TargetFrameworks>netstandard1.6;net451;netcoreapp3.0</TargetFrameworks>
+		<AssemblyName>Sakura.AspNetCore.Mvc.TempDataExtensions</AssemblyName>
+		<PackageId>Sakura.AspNetCore.Mvc.TempDataExtensions</PackageId>
+		<PackageTags>ASP.NET;ASP.NETCore;MVC;MVCCore;TempData;ITempDataProvider</PackageTags>
+		<PackageReleaseNotes>Upgrade project to support .NET Core App 3.0</PackageReleaseNotes>
+		<PackageProjectUrl>https://github.com/sgjsakura/AspNetCore</PackageProjectUrl>
+		<PackageLicenseUrl></PackageLicenseUrl>
+		<GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
+		<GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
+		<GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
+		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+		<RepositoryUrl>https://github.com/sgjsakura/AspNetCore.git</RepositoryUrl>
+		<RootNamespace>Sakura.AspNetCore.Mvc</RootNamespace>
+		<PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.ViewFeatures" Version="1.0.0" />
-  </ItemGroup>
+	<ItemGroup Condition=" '$(TargetFramework)' != 'netcoreapp3.0' ">
+		<PackageReference Include="Microsoft.AspNetCore.Mvc.ViewFeatures" Version="1.0.0" />
+	</ItemGroup>
 
-  <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
-    <GenerateDocumentationFile>true</GenerateDocumentationFile>
-  </PropertyGroup>
+	<ItemGroup Condition=" '$(TargetFramework)' == 'netcoreapp3.0' ">
+		<FrameworkReference Include="Microsoft.AspNetCore.App" />
+	</ItemGroup>
 
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net451' ">
-    <Reference Include="System" />
-    <Reference Include="Microsoft.CSharp" />
-  </ItemGroup>
+	<PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
+		<GenerateDocumentationFile>true</GenerateDocumentationFile>
+	</PropertyGroup>
 
+	<ItemGroup Condition=" '$(TargetFramework)' == 'net451' ">
+		<Reference Include="System" />
+		<Reference Include="Microsoft.CSharp" />
+	</ItemGroup>
+	
 </Project>
